# Trellis

./: .gitignore  GridScape.sln  README.md
.github/workflows/: clang-format-check.yml
GridScape/: CMakeLists.txt  GameObject.cpp  GridScape.filters  GridScape.rc  GridScape.vcxproj  GridScape.vcxproj.filters  Page.cpp  TextRenderer.cpp  glad.c  imgui.ini  main.cpp  page.h  resource.h  resource_manager.h  sprite_renderer.h
GridScape/include/: GUI.h  camera.h  client_server.h  game.h  game_object.h  glfw_handler.h  gui.h  network_client.h  network_manager.h  network_server.h  page.h  page_ui.h  resource_manager.h  shader.h  sprite_renderer.h  text_object.h  text_renderer.h  texture.h  ui.h  util.h
GridScape/mingw_stdthreads/utility_scripts/: Generate-StdLikeHeaders.ps1
GridScape/shaders/: sprite.frag  sprite.vert  text.vert
GridScape/src/: Camera.cpp  ClientServer.cpp  GLFWHandler.cpp  GUI.cpp  Game.cpp  GameObject.cpp  NetworkClient.cpp  NetworkManager.cpp  NetworkServer.cpp  Page.cpp  PageUI.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  StateManager.cpp  TextObject.cpp  TextRenderer.cpp  Texture.cpp  UI.cpp  Util.cpp  gui.cpp  main.cpp  network_server.cpp
Trellis/: .clang-format  CMakeLists.txt  imgui.ini
Trellis/include/: Board.h  GUI.h  board.h  board_renderer.h  camera.h  client_server.h  data.h  game.h  game_object.h  game_state.h  glfw_handler.h  imconfig.h  imgui_helpers.h  main_menu.h  network_manager.h  page.h  page_ui.h  renderer.h  resource.h  resource_manager.h  shader.h  sprite_renderer.h  sqlite_handler.h  state_manager.h  text_object.h  text_renderer.h  texture.h  transform.h  ui.h  util.h
Trellis/include/imgui/: imgui.h  imgui_helpers.h
Trellis/shaders/: board.frag  board.vert  sprite.frag
Trellis/src/: Board.cpp  BoardRenderer.cpp  Camera.cpp  ClientServer.cpp  Data.cpp  GLFWHandler.cpp  GUI.cpp  Game.cpp  GameObject.cpp  MainMenu.cpp  NetworkManager.cpp  Page.cpp  PageUI.cpp  Renderer.cpp  ResourceManager.cpp  SQLiteHandler.cpp  Shader.cpp  SpriteRenderer.cpp  StateManager.cpp  TextRenderer.cpp  Texture.cpp  Transform.cpp  UI.cpp  Util.cpp  main.cpp
Trellis/src/imgui/: imgui_demo.cpp
